2007-09-06  Philip Van Hoof  <pvanhoof@gnome.org>

	* Bugfix for POP folders (content building not needed and causes some
	crashers)
	* Error handling and reporting when the filesystem is full
	* Counting unread items was wrong, fixed

2007-09-06  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-store-account.c: fixed a problem in the
	notification of a folder removal that could cause a SIGSEV when
	deleting a tree of folders with messages.

2007-09-05  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed folder renames for local folders
	* Fixed a bug about keeping folders open

2007-09-04  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-camel/tny-camel-account.h: Change the 
	TnyCamelGetSupportedSecureAuthCallback callback to provide a
	GError* instead of a GError**, because it is not an output parameter.
	* libtinymail-camel/tny-camel-account.c: (on_supauth_idle_func),
	(tny_camel_account_get_supported_secure_authentication_async_thread
	), (tny_camel_account_get_supported_secure_authentication):
	Adapt to the change, propagating GErrors up to the callback.

2007-09-04  Philip Van Hoof  <pvanhoof@gnome.org>

	* Fixed a problem when folder creation failed: observers where
	nevertheless notified about a folder creation in this case

2007-09-04  Mark Doffman  <mark.doffman@codethink.co.uk>

	* bindigs/python/*: restructuring the Python language bindings

2007-09-04  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-camel/tny-camel-account.c:
	(tny_camel_account_set_url_string_default),
	(tny_camel_account_set_name_default),
	(tny_camel_account_set_id_default),
	(tny_camel_account_set_secure_auth_mech_default),
	(tny_camel_account_set_proto_default),
	(tny_camel_account_set_user_default),
	(tny_camel_account_set_hostname_default),
	(tny_camel_account_set_port_default),
	(tny_camel_account_set_pass_func_default),
	(tny_camel_account_set_forget_pass_func_default): Check that the input 